# webgraze

./: .gitignore  README.md  pyproject.toml  webgraze.py
webgraze/: scraper.py  scrapergetter.py  utils.py
webgraze/scrapers/: __init__.py  ca_scraper.py  example_scraper.py  hema_scraper.py  hm_scraper.py  primark_scraper.py  quotes_scraper.py  zalando_scraper.py
